add content, img, css; fix js/css

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                         позволят вам качественно <span>изменить все аспекты своей жизни:</span> от финансового до любовного.
                     </div>
                     <div class="for__button button start-js">Пройти Тест</div>
-                    <div class="for__year">2019</div>
+                    <div class="for__year">&copy; 2019</div>
+                    <div class="for__lightning"></div>
+                    <div class="for__lightning_left"></div>
                 </div>
             </div>
         </div>
