--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="overlay overlay-js">
             <div class="overlay__menu">
                 <ul>
-                    <li><a href="/index.html">Главная</a></li>
+                    <li><a href="">Главная</a></li>
                     <li>Информация</li>
                     <li class="start-js">Пройти тест</li>
                 </ul>
